<resources>
    <string name="app_name">CarJoin</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Signout</string>

    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join my car using CarJoin</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">CarJoin Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="string_signing_in">Signing In</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="string_search">Search</string>
    <string name="string_pick_up_location_caps">PICKUP LOCATION</string>
    <string name="string_select_destination">Select Destination</string>
    <string name="string_start_date_time">Start DateTime</string>
    <string name="string_end_date_time">End DateTime</string>
    <string name="string_vehicle_name">Vehicle Name</string>
    <string name="string_vehicle_number">Vehicle Number</string>
    <string name="string_vehicle_color">Vehicle Color</string>
    <string name="string_fuel_price">Fuel Price</string>
    <string name="string_maintenance_per">Maintenance Per</string>
    <string name="string_seats_available">Seats Available</string>
    <string name="string_vehicle_type">Vehicle Type</string>
    <string name="string_create">Create</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_request">Request</string>
    <string name="string_ignore">Ignore</string>
    <string name="string_pending">Pending</string>
    <string name="string_rejected">Rejected</string>
    <string name="string_accepted">Accepted</string>
    <string name="string_start_date">Start Date</string>
    <string name="string_no_of_passengers">No. Of Passengers</string>
    <string name="string_end_date">End Date</string>
    <string name="string_source">Source</string>
    <string name="string_destination">Destination</string>
    <string name="string_no_trips_found">No Trips Found</string>
    <string name="string_send">send</string>
    <string name="string_create_trip">Create Trip</string>
    <string name="string_find_trip">Find Trip</string>
    <string name="string_mileage">Mileage</string>
</resources>
