<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_start_date_time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="0.6"
                android:background="@drawable/edit_text_border"
                android:maxLines="1"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="0.4"
                android:background="@drawable/edit_text_border"
                android:maxLines="1"
                android:textSize="28sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_end_date_time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="0.6"
                android:background="@drawable/edit_text_border"
                android:maxLines="1"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/end_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="0.4"
                android:background="@drawable/edit_text_border"
                android:maxLines="1"
                android:textSize="28sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/vehicle_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/string_vehicle_name"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/vehicle_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/string_vehicle_number"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/vehicle_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/string_vehicle_color"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/fuel_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/string_fuel_price"
            android:inputType="numberDecimal"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/maintenance_per"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/string_maintenance_per"
            android:inputType="numberDecimal"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/seats_available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/string_seats_available"
            android:inputType="number"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/vehicle_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/string_vehicle_type"
            android:inputType="text"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_action"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_cancel"
                android:textAllCaps="true"
                android:textColor="#42A5F5" />

            <Button
                android:id="@+id/create_action"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_create"
                android:textAllCaps="true"
                android:textColor="#42A5F5" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
